manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-test
spec:
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx
